--- a/views/_layouts/head.ejs
+++ b/views/_layouts/head.ejs
@@ -22,6 +22,7 @@
 <link rel="stylesheet" href="assets/vendor/bootstrap-select/dist/css/bootstrap-select.min.css">
 <link rel="stylesheet" href="assets/vendor/slick-carousel/slick/slick.css">
 <link rel="stylesheet" href="assets/vendor/dzsparallaxer/dzsparallaxer.css">
+<link rel="stylesheet" href="assets/vendor/summernote/dist/summernote-lite.css">
 
 <!-- CSS MyTravel Template -->
 <link rel="stylesheet" href="assets/css/theme.css">
