--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -49,7 +49,53 @@
                 <div class="tab-content">
                     <div class="tab-pane fade active show" id="properties" role="tabpanel" aria-labelledby="pills-one-example-t1-tab">
                         <div class="row">
+                            <% if(users.length > 0) { %>
                             <h1>All Users</h1>
+                            <table class="table table-light">
+                                <thead>
+                                <tr>
+                                    <th scope="col"><span class="fas fa-user mr-2"></span>Full name</th>
+                                    <th scope="col"><span class="fas fa-mail-bulk mr-2"></span>Email</th>
+                                    <th scope="col"><span class="fas fa-user mr-2"></span>Role</th>
+                                    <th scope="col"><span class="fas fa-calendar mr-2"></span>Date Created</th>
+                                    <th scope="col"><span class="fas fa-cogs mr-2"></span>Actions</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <% users.forEach(function(user){ %>
+                                    <tr>
+                                        <th scope="row" class="align-middle">
+                                            <div class="d-flex align-items-center text-primary font-weight-medium">
+                                                <label><%= user.firstname %> <%= user.lastname %></label>
+                                            </div>
+                                        </th>
+                                        <td class="align-middle text-secondary">
+                                            <small class="d-block"><%= user.email %></small>
+                                        </td>
+                                        <td class="align-middle text-secondary">
+                                            <small class="d-block"><%= user.role %></small>
+                                        </td>
+                                        <td class="align-middle text-secondary">
+                                            <small class="d-block"><%= user.createdOn %></small>
+                                        </td>
+                                        <td class="align-middle">
+                                            <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/edit-user/<%= user._id %>" data-toggle="tooltip" data-placement="top" title="Edit">
+                                                <span class="fas fa-pen btn-icon__inner"></span>
+                                            </a>
+                                            <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/delete/user/<%= user._id %>" data-toggle="tooltip" data-placement="top" title="Delete">
+                                                <span class="fas fa-trash btn-icon__inner"></span>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                <% }); %>
+                                </tbody>
+                            </table>
+                                <% } else {%>
+                                    <div class="alert alert-warning m-auto" role="alert">
+                                        <h4 class="alert-heading">No users !</h4>
+                                        <p class="alert-text">Aww yeah, your website dont have any users / owners. If you want you can add users and define their roles.</p>
+                                    </div>
+                                <% }%>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="upcoming" role="tabpanel" aria-labelledby="pills-two-example-t1-tab">
