--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -50,6 +50,43 @@
                     <div class="tab-pane fade active show" id="properties" role="tabpanel" aria-labelledby="pills-one-example-t1-tab">
                         <div class="row">
                             <h1>All Users</h1>
+                            <table class="table table-light">
+                                <thead>
+                                <tr>
+                                    <th scope="col"><span class="fas fa-user mr-2"></span>Full name</th>
+                                    <th scope="col"><span class="fas fa-mail-bulk mr-2"></span>Email</th>
+                                    <th scope="col"><span class="fas fa-user mr-2"></span>Role</th>
+                                    <th scope="col"><span class="fas fa-calendar mr-2"></span>Date Created</th>
+                                    <th scope="col"><span class="fas fa-cogs mr-2"></span>Actions</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                <tr>
+                                    <th scope="row" class="align-middle">
+                                        <div class="d-flex align-items-center text-primary font-weight-medium">
+                                            <label>Mounika Kasarla</label>
+                                        </div>
+                                    </th>
+                                    <td class="align-middle text-secondary">
+                                        <small class="d-block">mounika@gmail.com</small>
+                                    </td>
+                                    <td class="align-middle text-secondary">
+                                        <small class="d-block">Owner</small>
+                                    </td>
+                                    <td class="align-middle text-secondary">
+                                        <small class="d-block">March 23, 2020</small>
+                                    </td>
+                                    <td class="align-middle">
+                                        <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/add-property" data-toggle="tooltip" data-placement="top" title="Edit">
+                                            <span class="fas fa-pen btn-icon__inner"></span>
+                                        </a>
+                                        <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/delete" data-toggle="tooltip" data-placement="top" title="Delete">
+                                            <span class="fas fa-trash btn-icon__inner"></span>
+                                        </a>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                     <div class="tab-pane fade" id="upcoming" role="tabpanel" aria-labelledby="pills-two-example-t1-tab">
