--- a/views/owner-dashboard.ejs
+++ b/views/owner-dashboard.ejs
@@ -11,7 +11,7 @@
     <div class="tabs-block tabs-v1">
         <div class="container space-1">
             <div class="w-md-80 w-lg-50 text-center mx-md-auto my-3">
-                <h2 class="section-title text-black font-size-30 font-weight-bold mb-0">Hello John Doe, Welcome to your Dashboard</h2>
+                <h2 class="section-title text-black font-size-30 font-weight-bold mb-0">Hello John, Welcome to your Dashboard</h2>
             </div>
             <!-- Nav Classic -->
             <ul class="nav tab-nav-pill flex-nowrap pb-4 pb-lg-5 tab-nav justify-content-lg-center" role="tablist">
@@ -48,9 +48,50 @@
             <div class="tab-content">
                 <div class="tab-pane fade active show" id="properties" role="tabpanel" aria-labelledby="pills-one-example-t1-tab">
                     <div class="row">
-                        <h1>Your Properties</h1>
+                        <h1>All Properties</h1>
+                        <table class="table table-light">
+                            <thead>
+                            <tr>
+                                <th scope="col"><span class="fas fa-user mr-2"></span>Property Title</th>
+                                <th scope="col"><span class="fas fa-mail-bulk mr-2"></span>Address</th>
+                                <th scope="col"><span class="fas fa-user mr-2"></span>City</th>
+                                <th scope="col"><span class="fas fa-calendar mr-2"></span>Date Created</th>
+                                <th scope="col"><span class="fas fa-cogs mr-2"></span>Actions</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <% properties.forEach(function(property){ %>  
+                            <tr>
+                                <th scope="row" class="align-middle">
+                                    <div class="d-flex align-items-center text-primary font-weight-medium">
+                                       <label><a href="/property-details/<%= property._id%>"><%= property.rentalname%></a> </label>
+                                    </div>
+                                </th>
+                                <td class="align-middle text-secondary">
+                                    <small class="d-block"><%= property.address%></small>
+                                </td>
+                                <td class="align-middle text-secondary">
+                                    <small class="d-block"><%= property.city%></small>
+                                </td>
+                                <td class="align-middle text-secondary">
+                                    <small class="d-block"><%= property.createdOn.toDateString()%></small>
+                                </td>
+                                <td class="align-middle">
+                                    <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/add-property" data-toggle="tooltip" data-placement="top" title="Edit">
+                                        <span class="fas fa-pen btn-icon__inner"></span>
+                                    </a>
+                                    <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/delete" data-toggle="tooltip" data-placement="top" title="Delete">
+                                        <span class="fas fa-trash btn-icon__inner"></span>
+                                    </a>
+                                </td>
+                            </tr>
+                            <%
+                        });%>
+                            </tbody>
+                        </table>
                     </div>
                 </div>
+                
                 <div class="tab-pane fade" id="upcoming" role="tabpanel" aria-labelledby="pills-two-example-t1-tab">
                     <div class="row">
                         <h1>Upcoming Stays</h1>
