--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -51,6 +51,23 @@
                         <div class="row">
                             <% if(users.length > 0) { %>
                             <h1>All Users</h1>
+                                <!--displaying status message-->
+                                <div class="container d-block">
+                                <% if (typeof errorMsg != 'undefined' && errorMsg) { %>
+                                <div class="alert alert-error alert-dismissible fade show" role="alert">
+                                    <%- errorMsg %>
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div> <% } else if(typeof successMsg != 'undefined' && successMsg) { %>
+                                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                        <%- successMsg %>
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                    </div>
+                                <% } %>
+                                </div>
                             <table class="table table-light">
                                 <thead>
                                 <tr>
