user deletion and status messages
user deletion and status messages

--- a/views/_layouts/head.ejs
+++ b/views/_layouts/head.ejs
@@ -23,6 +23,7 @@
 <link rel="stylesheet" href="/assets/vendor/slick-carousel/slick/slick.css">
 <link rel="stylesheet" href="/assets/vendor/dzsparallaxer/dzsparallaxer.css">
 <link rel="stylesheet" href="/assets/vendor/summernote/dist/summernote-lite.css">
+<link rel="stylesheet" href="/assets/vendor/custombox/dist/custombox.min.css">
 
 <!-- CSS MyTravel Template -->
 <link rel="stylesheet" href="/assets/css/theme.css">
