--- a/views/owner-dashboard.ejs
+++ b/views/owner-dashboard.ejs
@@ -49,6 +49,24 @@
                 <div class="tab-pane fade active show" id="properties" role="tabpanel" aria-labelledby="pills-one-example-t1-tab">
                     <div class="row">
                         <h1>All Properties</h1>
+                        <!--displaying status message-->
+                        <div class="container d-block">
+                            <% if (typeof errorMsg != 'undefined' && errorMsg) { %>
+                                <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                    <%- errorMsg %>
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                            <% } else if(typeof successMsg != 'undefined' && successMsg) { %>
+                                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                    <%- successMsg %>
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </div>
+                            <% } %>
+                        </div>
                         <table class="table table-light">
                             <thead>
                             <tr>
@@ -60,7 +78,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <% properties.forEach(function(property){ %>  
+                            <% properties.forEach(function(property){ %>
                             <tr>
                                 <th scope="row" class="align-middle">
                                     <div class="d-flex align-items-center text-primary font-weight-medium">
@@ -74,7 +92,7 @@
                                     <small class="d-block"><%= property.city%></small>
                                 </td>
                                 <td class="align-middle text-secondary">
-                                    <small class="d-block"><%= property.createdOn.toDateString()%></small>
+                                    <small class="d-block"><%= property.createdOn%></small>
                                 </td>
                                 <td class="align-middle">
                                     <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/add-property" data-toggle="tooltip" data-placement="top" title="Edit">
@@ -91,7 +109,7 @@
                         </table>
                     </div>
                 </div>
-                
+
                 <div class="tab-pane fade" id="upcoming" role="tabpanel" aria-labelledby="pills-two-example-t1-tab">
                     <div class="row">
                         <h1>Upcoming Stays</h1>
