another round of changes
another round of changes

--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -150,7 +150,7 @@
                                     <!-- Form Group -->
                                     <div class="d-flex justify-content-between mb-1">
                                         <div class="custom-control custom-switch mb-4">
-                                            <input type="checkbox" value="On" class="custom-control-input"
+                                            <input type="checkbox" value="owner" class="custom-control-input"
                                                    id="HaveProperty" name="HaveProperty">
                                             <label class="custom-control-label" for="HaveProperty">Do you have a
                                                 property to rent?</label>
