--- a/views/SignUp.ejs
+++ b/views/SignUp.ejs
@@ -19,7 +19,25 @@
                         </div>
                         <!-- End Header -->
                         <div class="card-body pt-5 pb-4">
-
+                            <!--displaying status message-->
+                            <div class="container d-block">
+                                <% if (typeof errorMsg != 'undefined' && errorMsg) { %>
+                                    <div class="alert alert-danger alert-dismissible fade show" role="alert">
+                                        <%- errorMsg %>
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                    </div>
+                                <% } else if(typeof successMsg != 'undefined' && successMsg) { %>
+                                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                                        <%- successMsg %>
+                                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                            <span aria-hidden="true">×</span>
+                                        </button>
+                                    </div>
+                                <% } %>
+                            </div>
+                            <!--displaying status message ends here-->
                             <div class="tab-content">
                                 <div class="tab-pane fade active show" id="pills-one-code-sample" role="tabpanel"
                                      aria-labelledby="pills-one-code-sample-tab">
