--- a/views/admin-dashboard.ejs
+++ b/views/admin-dashboard.ejs
@@ -55,7 +55,7 @@
                     <div class="tab-pane fade active show" id="properties" role="tabpanel"
                          aria-labelledby="pills-one-example-t1-tab">
                         <div class="row">
-                            <% if(users.length > 0) { %>
+
                                 <div class="container d-flex justify-content-between">
                                     <h1>All Users</h1>
                                     <a href="new-user" class="link">
@@ -64,6 +64,7 @@
                                             </span>
                                         Add user</a>
                                 </div>
+                            <% if(users.length > 0) { %>
                                 <!--displaying status message-->
                                 <div class="container d-block">
                                     <% if (typeof errorMsg != 'undefined' && errorMsg) { %>
@@ -82,6 +83,7 @@
                                         </div>
                                     <% } %>
                                 </div>
+                                <!--displaying status message ends here-->
                                 <table class="table table-light">
                                     <thead>
                                     <tr>
