image upload functionality
image upload functionality

--- a/views/add-property.ejs
+++ b/views/add-property.ejs
@@ -320,7 +320,7 @@
                                 <label class="file-attachment-input w" for="Images">
                                     <span class="d-block mb-2">Upload Images</span>
                                     <small class="d-block text-muted">Maximum file size is 2MB</small>
-                                    <input id="images" name="images-attachment" type="file" class="js-custom-file-attach file-attachment-input__label"
+                                    <input id="images" name="images" type="file" multiple class="js-custom-file-attach file-attachment-input__label"
                                            data-result-text-target="#imageFileUploadText">
                                     <span id="imageFileUploadText"></span>
                                 </label>
