user navigation and logout functionality
user navigation and logout functionality

--- a/views/_layouts/header.ejs
+++ b/views/_layouts/header.ejs
@@ -1,9 +1,16 @@
 <!-- ========== HEADER ========== -->
-<header id="header" class="u-header u-header--dark-nav-links-xl u-header--show-hide-xl u-header--static-xl" data-header-fix-moment="500" data-header-fix-effect="slide">
+<header id="header" class="u-header u-header--dark-nav-links-xl u-header--show-hide-xl u-header--static-xl"
+        data-header-fix-moment="500" data-header-fix-effect="slide">
     <div class="u-header__section u-header__shadow-on-show-hide py-4 py-xl-0">
         <div id="logoAndNav" class="container-fluid py-xl-2 border-bottom-xl">
             <!-- Nav -->
-            <%- include('navigation/user-navigation') -%>
+            <% if(typeof session != 'undefined' && session.role === "owner") { %>
+                <%- include('navigation/owner-navigation') -%>
+            <% } else if(typeof session != 'undefined' && session.role === "admin") { %>
+                <%- include('navigation/admin-navigation') -%>
+            <% } else  { %>
+                <%- include('navigation/user-navigation') -%>
+            <% } %>
             <!-- End Nav -->
         </div>
     </div>
