--- a/views/_layouts/navigation/owner-navigation.ejs
+++ b/views/_layouts/navigation/owner-navigation.ejs
@@ -20,25 +20,12 @@
         <ul class="navbar-nav u-header__navbar-nav">
             <!-- Home -->
             <li class="nav-item hs-has-sub-menu u-header__nav-item" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut">
-                <a id="homeMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="/" aria-haspopup="true" aria-expanded="false" aria-labelledby="homeSubMenu">Home</a>
+                <a id="homeMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="/owner-dashboard" aria-haspopup="true" aria-expanded="false" aria-labelledby="homeSubMenu">Owner Dashboard</a>
             </li>
             <!-- End Home -->
-
-            <!-- Hotel -->
-            <li class="nav-item hs-has-sub-menu u-header__nav-item" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut">
-                <a id="hotelMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="#search-property" aria-haspopup="true" aria-expanded="false" aria-labelledby="hotelSubMenu">Search Property</a>
-            </li>
-            <!-- End Hotel -->
-
-            <!-- Tour -->
-            <li class="nav-item hs-has-mega-menu u-header__nav-item" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut" data-max-width="722px" data-position="right">
-                <a id="tourMegaMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle" href="/about-us" aria-haspopup="true" aria-expanded="false">About us</a>
-            </li>
-            <!-- End Tour -->
-
             <!-- Rental -->
             <li class="nav-item hs-has-sub-menu u-header__nav-item" data-event="hover" data-animation-in="slideInUp" data-animation-out="fadeOut">
-                <a id="rentalMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="/login" aria-haspopup="true" aria-expanded="false" aria-labelledby="rentalSubMenu">Login or Register</a>
+                <a id="rentalMenu" class="nav-link u-header__nav-link u-header__nav-link-toggle u-header__nav-link-border" href="/logout" aria-haspopup="true" aria-expanded="false" aria-labelledby="rentalSubMenu">Logout</a>
             </li>
             <!-- End Rental -->
         </ul>
