--- a/views/edit-user.ejs
+++ b/views/edit-user.ejs
@@ -76,7 +76,7 @@
                             <div class="custom-control custom-switch mb-4">
                                 <input type="checkbox" value="<%= user.role === 'owner' ? "On" : undefined %>"
                                        class="custom-control-input" id="HaveProperty" name="role" checked="<%= user.role === 'owner' %>">
-                                <label class="custom-control-label" for="HaveProperty">Owner</label>
+                                <label class="custom-control-label" for="HaveProperty">Do you have a rental property?</label>
                             </div>
                         </div>
                         <input type="hidden" name="userid" value="<%= user._id %>">
