--- a/views/owner-dashboard.ejs
+++ b/views/owner-dashboard.ejs
@@ -11,7 +11,8 @@
     <div class="tabs-block tabs-v1">
         <div class="container space-1">
             <div class="w-md-80 w-lg-50 text-center mx-md-auto my-3">
-                <h2 class="section-title text-black font-size-30 font-weight-bold mb-0">Hello John, Welcome to your Dashboard</h2>
+                <h2 class="section-title text-black font-size-30 font-weight-bold mb-0">Hello <%=owner.firstname%>, Welcome to your Dashboard</h2>
+                <a href="/logoff"><button  class="btn btn-primary float-right">Log Off</button></a>
             </div>
             <!-- Nav Classic -->
             <ul class="nav tab-nav-pill flex-nowrap pb-4 pb-lg-5 tab-nav justify-content-lg-center" role="tablist">
@@ -49,6 +50,7 @@
                 <div class="tab-pane fade active show" id="properties" role="tabpanel" aria-labelledby="pills-one-example-t1-tab">
                     <div class="row">
                         <h1>All Properties</h1>
+                       <a href="/add-property" ><button class="btn btn-primary far fa-plus-square font-weight-semi-bold m-2" >Add Property</button></a> 
                         <table class="table table-light">
                             <thead>
                             <tr>
@@ -77,10 +79,10 @@
                                     <small class="d-block"><%= property.createdOn.toDateString()%></small>
                                 </td>
                                 <td class="align-middle">
-                                    <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/add-property" data-toggle="tooltip" data-placement="top" title="Edit">
+                                    <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/edit-property/owner/<%= property._id%>" data-toggle="tooltip" data-placement="top" title="Edit">
                                         <span class="fas fa-pen btn-icon__inner"></span>
                                     </a>
-                                    <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/delete" data-toggle="tooltip" data-placement="top" title="Delete">
+                                    <a class="btn btn-xs btn-icon btn-soft-secondary transition-3d-hover" href="/delete/owner/<%= property._id%>" data-toggle="tooltip" data-placement="top" title="Delete">
                                         <span class="fas fa-trash btn-icon__inner"></span>
                                     </a>
                                 </td>
@@ -721,6 +723,86 @@
                 <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="pills-four-example-t1-tab">
                     <div class="row">
                         <h1>Account Information</h1>
+                    </div>
+                    <div class="max-width-810">
+                        <div class="form-group pb-1">
+                            <div class="js-form-message js-focus-state">
+                                <label class="font-weight-bold" for="firstname">First Name</label>
+                                <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
+                                    <input type="text" disabled class="form-control" value="<%= owner.firstname%>" name="firstname" id="firstname" placeholder="First Name" aria-label="First Name" aria-describedby="firstname" required data-msg="Please enter a valid first name." data-error-class="u-has-error" data-success-class="u-has-success">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text" id="username">
+                                            <span class="flaticon-user font-size-20"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Form Group -->
+
+                        <!-- Form Group -->
+                        <div class="form-group pb-1">
+                            <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
+                                <label class="font-weight-bold" for="lastname">Last Name</label>
+                                <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
+                                    <input type="text" disabled class="form-control"  value="<%= owner.lastname%>" name="lastname" id="lastname" placeholder="Last Name" aria-label="Last Name" aria-describedby="normalname" required data-msg="Please enter a valid last name." data-error-class="u-has-error" data-success-class="u-has-success">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text" id="username">
+                                            <span class="flaticon-user font-size-20"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Form Group -->
+
+                        <!-- Form Group -->
+                        <div class="form-group pb-1">
+                            <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
+                                <label class="font-weight-bold" for="email">Email</label>
+                                <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
+                                    <input type="email" disabled class="form-control"  value="<%= owner.email%>" name="email" id="email" placeholder="Email" aria-label="Email" aria-describedby="signupEmail" required="" data-msg="Please enter a valid email address." data-error-class="u-has-error" data-success-class="u-has-success">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text" id="signupEmail">
+                                            <span class="far fa-envelope font-size-20"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Form Group -->
+
+                        <!-- Form Group -->
+                        <div class="form-group pb-1">
+                            <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
+                                <label class="font-weight-bold" for="phone">Phone Number</label>
+                                <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
+                                    <input type="text" disabled class="form-control"  value="<%= owner.phone%>" name="phone" id="phone" placeholder="Phone Number" aria-label="phone" aria-describedby="phone" required data-msg="Please enter a valid phone number." data-error-class="u-has-error" data-success-class="u-has-success">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text" id="phone">
+                                            <span class="flaticon-phone-call font-size-20"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Form Group -->
+
+                        <!-- Form Group -->
+                        <div class="form-group pb-1">
+                            <div class="js-form-message js-focus-state  border-width-2 border-color-8 rounded-sm">
+                                <label class="font-weight-bold" for="signupSrPassword">Password</label>
+                                <div class="input-group input-group-tranparent border input-group-borderless input-group-radiusless">
+                                    <input type="password" disabled class="form-control" value="<%= owner.password%>" name="password" id="signupSrPassword" placeholder="Password" aria-label="Password" aria-describedby="signupPassword" required data-msg="Please enter a valid password" data-error-class="u-has-error" data-success-class="u-has-success">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="signupPassword">
+                                            <span class="flaticon-password font-size-20"></span>
+                                        </span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End Form Group -->
                     </div>
                 </div>
             </div>
